# AnixOps-EasySSH

./: .gitignore  ACHIEVEMENTS.md  AGENT_STATISTICS.md  AGENT_WORK_REPORT.md  API_GUIDE.md  BABYSITTER.md  BENCHMARK_SUMMARY.md  BUILD_AUTOMATION_REPORT.md  CHANGELOG.md  CI_CD_CONFIGURATION.md  CLAUDE.md  CODE_STATISTICS.md  CONTRIBUTING.md  Cargo.toml  DASHBOARD.md  DEBUG_UNIFIED_REPORT.md  DOCS_RS.md  FINAL_REPORT.md  IMPORT_EXPORT_FORMATS.md  IMPORT_EXPORT_IMPLEMENTATION.md  INTEGRATION_PLAN.md  Justfile  KUBERNETES_IMPLEMENTATION.md  README.md  RECORDING_IMPLEMENTATION_REPORT.md  REMOTE_DESKTOP_IMPLEMENTATION.md  REPO_CLEANUP_ANALYSIS.md  SECURITY_AUDIT_COMPLETE_2026-04-01.md  SECURITY_AUDIT_FIX_REPORT.md  STANDARD_OPTIMIZATION_REPORT.md  SYNC_SYSTEM.md  TARGET_STRUCTURE.md  TESTING_SETUP.md  TEST_COVERAGE_REPORT.md  TIMELINE.md  WORKFLOW_SYSTEM_SUMMARY.md  auto_build.sh  autonomous-run-25.json  build_output.txt  check_errors.txt  (+18 more)
api-tester/api-core/: Cargo.toml
api-tester/api-core/src/: client.rs  collection.rs  database.rs  environment.rs  grpc.rs  history.rs  import_export.rs  lib.rs  test_runner.rs  types.rs  websocket.rs
api-tester/api-tauri/: Cargo.toml
api-tester/api-tauri/src/: commands.rs  lib.rs
core/: Cargo.toml  cbindgen.toml
core/benches/: BENCHMARK_REPORT.md  crypto_bench.rs  db_bench.rs  sftp_bench.rs  ssh_bench.rs  workflow_bench.rs
core/src/: ai_programming.rs  audit.rs  auto_update.rs  collaboration.rs  config_import_export.rs  connection_pool.rs  crypto.rs  db.rs  debug_access_ffi.rs  debug_ws.rs  docker.rs  edition.rs  edition_ffi.rs  error.rs  ffi.rs  git-hooks.ts  git_client.rs  git_ffi.rs  git_manager.rs  git_types.rs  git_workflow.rs  git_workflow_executor.rs  i18n.rs  i18n_ffi.rs  keychain.rs  kubernetes.rs  kubernetes_client.rs  kubernetes_ffi.rs  kubernetes_tauri.rs  layout.rs  lib.rs  linux_service.rs  log_monitor.rs  log_monitor_ffi.rs  macro_recorder.rs  port_forward.rs  pro.rs  rbac.rs  recording_commands.rs  remote_desktop.rs  (+17 more)
core/src/auto_update/: ab_testing.rs  delta.rs  platform.rs  rollback.rs  server.rs  signature.rs  ui_integration.rs
core/src/backup/: compression.rs  database.rs  engine.rs  incremental.rs  mod.rs  remote.rs  report.rs  restore.rs  scheduler.rs  storage.rs  verification.rs
core/src/database_client/: backup.rs  batch.rs  cache.rs  connection.rs  editor.rs  erdiagram.rs  history.rs  import_export.rs  mod.rs  performance.rs  pool.rs  query.rs  schema.rs  tunnel.rs
core/src/debug/: README.md  access.rs  ai_integration.rs  logging.rs  types.rs
core/src/docker/: client.rs  types.rs
core/src/monitoring/: alerts.rs  collector.rs  dashboard.rs  metrics.rs  mod.rs  notifications.rs  sla.rs  storage.rs  tests.rs  topology.rs
core/src/sync/: conflict.rs  engine.rs  mod.rs  providers.rs
core/src/team/: permissions.rs  types.rs
core/src/telemetry/: collector.rs  consent.rs  error_tracker.rs  feature_flags.rs  feedback.rs  health_monitor.rs  metrics.rs  mod.rs  reporter.rs  storage.rs
core/src/terminal/: embedded.rs  mod.rs  multitab.rs  theme.rs  webgl.rs  xterm_compat.rs
crates/easyssh-api-tester/api-core/: Cargo.toml
crates/easyssh-core/: Cargo.toml  PERFORMANCE_OPTIMIZATION_REPORT.md  build.rs  test-report.md
crates/easyssh-core/benches/: PERFORMANCE_VALIDATION_REPORT.md  crypto_bench.rs  db_bench.rs  performance_opt_bench.rs  search_bench.rs  sftp_bench.rs  ssh_bench.rs  startup_bench.rs  workflow_bench.rs
crates/easyssh-core/examples/: monitoring.rs  performance_demo.rs  telemetry_demo.rs  update_checker_demo.rs  version_integration_gtk4.rs  version_integration_tui.rs  version_integration_windows.rs  workflow_demo.rs
crates/easyssh-core/src/: ai_programming.rs  audit.rs  collaboration.rs  config_import_export.rs  connection_pool.rs  crypto.rs  db.rs  debug_access.rs  debug_access_ffi.rs  edition.rs  edition_ffi.rs  error.rs  git-types.ts  git_manager.rs  i18n.rs  i18n_ffi.rs  keychain.rs  kubernetes_client.rs  layout.rs  lib.rs  linux_service.rs  log_monitor.rs  log_monitor_ffi.rs  logger.rs  macro_recorder.rs  port_forward.rs  rbac.rs  script_library.rs  security_tests.rs  sftp.rs  sftp_backup.rs  ssh.rs  sso.rs  update_checker.rs  vault.rs  version.rs  version_ffi.rs  windows_auth.rs  workflow_engine.rs  workflow_scheduler.rs  (+1 more)
crates/easyssh-core/tests/: README.md  TEST_FRAMEWORK_SUMMARY.md  database_compiles.rs
crates/easyssh-platforms/shared-ui/: Cargo.toml
crates/easyssh-pro-server/: .env.example  Cargo.toml
crates/easyssh-pro-server/docs/: API_CLIENTS.md
crates/easyssh-pro-server/src/: auth.rs  config.rs  db.rs  escalation_service.rs  incident_models.rs  incident_service.rs  main.rs  middleware.rs  models.rs  post_mortem_service.rs  rate_limit.rs  redis_cache.rs  runbook_service.rs  websocket.rs
crates/easyssh-pro-server/tests/: integration_tests.rs
crates/easyssh-tui/: Cargo.toml  IMPROVEMENTS.md  app.rs  events.rs  keybindings.rs  main.rs  theme.rs  virtual_list.rs
crates/easyssh-tui/examples/: version_integration_tui.rs
crates/easyssh-tui/ui/: detail_panel.rs  layout.rs  mod.rs  server_list.rs  sidebar.rs
pro-server/: Cargo.toml  Dockerfile  INCIDENT_RESPONSE_README.md  README.md  docker-compose.yml
pro-server/migrations/: 003_incident_response.sql
pro-server/src/: auth.rs  config.rs  db.rs  escalation_service.rs  incident_models.rs  incident_service.rs  main.rs  middleware.rs  models.rs  post_mortem_service.rs  redis_cache.rs  runbook_service.rs  update_server.rs  websocket.rs
pro-server/src/api/: audit.rs  incident.rs  mod.rs  rbac.rs  resources.rs  sso.rs  teams.rs
pro-server/src/docs/: swagger.rs
pro-server/src/services/: audit_service.rs  auth_service.rs  collaboration_service.rs  mod.rs  rbac_service.rs  resource_service.rs  sso_service.rs  team_service.rs
pro-server/tests/: integration_tests.rs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: ai_programming.rs  crypto.rs  db.rs  lib.rs  main.rs  pro.rs  sftp.rs  ssh.rs  terminal.rs
tools/version_checker/: Cargo.toml
tui/: Cargo.toml  main.rs
(+1590 files in other folders)
