[workspace]
resolver = "2"
members = ["core", "tui", "platforms/linux/easyssh-gtk4", "platforms/windows/easyssh-winui"]

[workspace.package]
version = "0.3.0"
authors = ["EasySSH Team"]
edition = "2021"
license = "MIT"
repository = "https://github.com/anixops/easyssh"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
