[workspace]
resolver = "2"
members = [
    "crates/easyssh-core",
    "crates/easyssh-tui",
    "crates/easyssh-platforms/windows/easyssh-winui",
    "crates/easyssh-platforms/linux/easyssh-gtk4",
    "crates/easyssh-pro-server",
    "crates/easyssh-api-tester/api-core",
    "crates/easyssh-tools/foreground_monitor"
]

[workspace.package]
version = "0.3.0"
authors = ["EasySSH Team"]
edition = "2021"
license = "MIT"
repository = "https://github.com/anixops/easyssh"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Unified dependency versions - security fixes and optimization
base64 = "0.21"
reqwest = { version = "0.12", features = ["json"] }
lru = "0.12"
validator = "0.20"
redis = "0.25"
rusqlite = { version = "0.32", features = ["bundled"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "chrono", "uuid"] }
git2 = "0.18"
chrono = { version = "0.4", features = ["serde", "clock", "std", "now"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Cross-platform SQLite alignment
libsqlite3-sys = { version = "0.30", features = ["bundled"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[profile.release-lite]
inherits = "release"
opt-level = "z"
codegen-units = 1
lto = true
strip = true
panic = "abort"
