[workspace]
resolver = "2"
members = [
    "crates/easyssh-core",
    "crates/easyssh-tui",
    "crates/easyssh-platforms/windows/easyssh-winui",
    "crates/easyssh-platforms/windows/easyssh-egui",
    "crates/easyssh-platforms/linux/easyssh-gtk4",
    "crates/easyssh-platforms/shared-ui",
    "crates/easyssh-pro-server",
    "crates/easyssh-api-tester/api-core",
    "crates/easyssh-tools/foreground_monitor"
]

[workspace.package]
version = "0.3.0"
edition = "2021"
authors = ["EasySSH Team"]
license = "MIT"
repository = "https://github.com/anixops/easyssh"
rust-version = "1.75"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Error handling
thiserror = "2"
anyhow = "1"

# Tracing & logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"
env_logger = "0.11"

# Identity & utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock", "std", "now"] }
regex = "1.10"

# Cryptography
argon2 = { version = "0.5", features = ["alloc", "password-hash"] }
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
sha2 = "0.10"
hmac = "0.12"
blake3 = "1.5"
zeroize = { version = "1.7", features = ["derive"] }
rand = "0.8"
base64 = "0.21"
hex = "0.4"
ed25519-dalek = "2"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Database
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "chrono", "uuid", "sqlite"] }
rusqlite = { version = "0.32", features = ["bundled"] }
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
redis = { version = "0.25", features = ["tokio-comp"] }

# SSH & networking
ssh2 = "0.9"
russh = { version = "0.54", default-features = false, features = ["ring", "rsa", "flate2"] }
russh-keys = "0.49"
russh-sftp = "2"
tokio-tungstenite = "0.29"

# System utilities
sysinfo = "0.30"
sys-locale = "0.3"
portable-pty = "0.8"

# PTY native implementations
nix = { version = "0.29", features = ["term", "poll", "signal", "process"] }

# Keychain
keyring = "3"

# File system
dirs = "5"
tempfile = "3"
walkdir = "2"
tar = "0.4"
zip = "2.2"
bzip2 = "0.4"
zstd = "0.13"
xz2 = "0.1"

# Caching
lru = "0.16"
parking_lot = "0.12"

# Validation
validator = { version = "0.20", features = ["derive"] }
semver = "1"

# Git support
git2 = "0.20"

# i18n
fluent = "0.16"
unic-langid = { version = "0.9", features = ["macros"] }

# TOTP
totp-rs = { version = "5.3", features = ["qr", "zeroize"] }

# Cron scheduling
cron-parser = "0.3"
tokio-cron-scheduler = "0.15"

# Reed-Solomon (for backup)
reed-solomon-erasure = "6.0"

# Compression
flate2 = "1.0"

# CSV
csv = "1.3"

# URL handling
url = "2.5.4"
urlencoding = "2.1"

# Cloud SDKs (optional)
aws-config = "1"
aws-sdk-s3 = "1"
google-cloud-storage = { version = "=0.22" }
azure_storage = { version = "0.21" }
azure_storage_blobs = { version = "0.21" }

# Hash
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Kubernetes (optional)
kube = { version = "0.88", features = ["client", "rustls-tls", "ws"] }
k8s-openapi = { version = "0.21", features = ["v1_28"] }
yaml-rust2 = { version = "0.8" }

# Database clients (optional)
mysql_async = { version = "0.36" }
tokio-postgres = { version = "0.7" }
mongodb = { version = "3.0" }

# Web framework (pro-server)
axum = { version = "0.7", features = ["ws", "multipart"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }

# SSO
openidconnect = { version = "4.0", features = ["reqwest"] }
samael = { version = "0.0.20", features = ["xmlsec"] }

# Rate limiting
governor = "0.6"

# Email
lettre = { version = "0.11", features = ["tokio1-native-tls", "smtp-transport"] }

# JWT
jsonwebtoken = "9"
bcrypt = { version = "0.16", features = ["std"] }

# API documentation
utoipa = { version = "4", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }

# gRPC (api-tester)
tonic = { version = "0.12" }
prost = { version = "0.13" }

# HTTP
http = "1"
hyper = { version = "1", features = ["full"] }

# Bytes
bytes = { version = "1.5" }

# h2
h2 = { version = "0.3" }

# Form data
multer = "3"
serde_urlencoded = "0.7"

# fs4
fs4 = { version = "0.12" }

# Once cell
once_cell = "1"
lazy_static = "1.5"

# Time
time = "0.3"

# MIME
mime = "0.3"

# Config
dotenvy = "0.15"
config = "0.14"
toml = "0.8"

# Actix (update server)
actix-web = { version = "4" }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# XML
xml-rs = "0.8"

# Whoami
whoami = "1.5"

# Windows
windows = { version = "0.59", features = ["Win32_Foundation"] }
windows-sys = { version = "0.59", features = ["Win32_Foundation"] }

# ============================================================================
# Build Profiles
# ============================================================================

# Default release profile - balanced optimization
[profile.release]
opt-level = 3
codegen-units = 4
lto = "thin"
strip = true
panic = "abort"
overflow-checks = true

# Lite version profile - minimal binary size
[profile.release-lite]
inherits = "release"
opt-level = "z"
codegen-units = 1
lto = true
strip = true
panic = "abort"

# Standard version profile - balanced performance/size
[profile.release-standard]
inherits = "release"
opt-level = 3
codegen-units = 4
lto = "thin"

# Pro version profile - server performance
[profile.release-pro]
inherits = "release"
opt-level = 3
codegen-units = 8
lto = "fat"
strip = false           # Keep symbols for debugging
panic = "unwind"        # Better error handling

# Development profile - fast compilation
[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"

# Development with some optimizations
[profile.dev-opt]
inherits = "dev"
opt-level = 1

# Test profile
[profile.test]
opt-level = 1
debug = true

# Bench profile
[profile.bench]
opt-level = 3
debug = false
lto = "thin"

