[package]
name = "easyssh-core"
version = "0.3.0"
edition = "2021"
authors = ["EasySSH Team"]
description = "EasySSH cross-platform native SSH client core library"
license = "MIT"

[lib]
name = "easyssh_core"
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
keyring = "3"
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
thiserror = "1"
dirs = "5"
base64 = "0.21"
ssh2 = "0.9"
portable-pty = { version = "0.8", optional = true }
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
futures-util = "0.3"
tokio-tungstenite = "0.24"
whoami = "1.5"

[features]
default = ["lite"]
lite = []
standard = ["lite", "embedded-terminal", "split-screen", "sftp", "monitoring"]
pro = ["standard", "team", "audit", "sso"]
embedded-terminal = ["dep:portable-pty"]
split-screen = []
sftp = []
monitoring = []
team = []
audit = []
sso = []

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
