[package]
name = "easyssh-pro-server"
version = "0.3.0"
edition = "2021"
authors = ["EasySSH Team"]
description = "EasySSH Pro Backend API Server - Team collaboration, audit logs, SSO"
license = "MIT"

[[bin]]
name = "pro-server"
path = "src/main.rs"

[[bin]]
name = "update-admin"
path = "src/bin/update-admin.rs"

[dependencies]
# Core dependencies from workspace
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

# Web framework - Axum
axum = { version = "0.7", features = ["ws", "multipart"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip", "compression-br", "auth"] }
hyper = { version = "1", features = ["full"] }

# Update Server - Actix Web
actix-web = { version = "4", optional = true }

# CLI
clap = { version = "4", features = ["derive", "env"], optional = true }

# Database - SQLx
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "sqlite", "postgres", "mysql", "chrono", "uuid", "migrate", "macros"] }
libsqlite3-sys = { workspace = true }

# Cache - Redis
redis = { workspace = true, features = ["tokio-comp", "connection-manager"] }

# Authentication & Security
jsonwebtoken = "9"
argon2 = { version = "0.5", features = ["alloc", "password-hash"] }
sha2 = "0.10"
hmac = "0.12"
bcrypt = { version = "0.16", features = ["std"] }
rand = "0.8"
base64 = { workspace = true }

# API Documentation - OpenAPI/Swagger
utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }

# Real-time - WebSocket
tokio-tungstenite = "0.24"
futures-util = "0.3"
futures-channel = "0.3"

# Serialization & Validation
chrono = { version = "0.4", features = ["serde"] }
validator = { workspace = true, features = ["derive"] }
regex = "1"
once_cell = "1"
semver = "1"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Error handling
anyhow = "1"

# HTTP Client for SSO
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# SAML SSO
samael = { version = "0.0.16", features = ["xmlsec"] }
xml-rs = "0.8"

# OIDC SSO
openidconnect = { version = "3", features = ["reqwest"] }
url = "2"

# Rate limiting
governor = "0.6"

# Email for invitations
lettre = { version = "0.11", features = ["tokio1-native-tls", "smtp-transport", "builder"] }

# Encryption
aes-gcm = "0.10"
aes = "0.8"

# Utils
serde_yaml = "0.9"
tempfile = "3"
walkdir = "2"
mime = "0.3"
time = "0.3"

[dev-dependencies]
tokio-test = "0.4"
reqwest = { version = "0.12", features = ["json"] }

[features]
default = []
update-server = ["dep:actix-web"]
admin-cli = ["dep:clap"]
