[package]
name = "api-tester-core"
version = "0.1.0"
edition = "2021"
authors = ["EasySSH Team"]
description = "API testing core library - HTTP/WebSocket/gRPC client"
license = "MIT"

[lib]
name = "api_tester_core"
crate-type = ["rlib", "staticlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart", "stream", "cookies"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
http = "1"
url = "2"
base64 = "0.21"
hex = "0.4"
sha2 = "0.10"
hmac = "0.12"
tracing = "0.1"
log = "0.4"
dirs = "5"

# gRPC support
tonic = { version = "0.12", optional = true }
prost = { version = "0.13", optional = true }
tower = { version = "0.5", optional = true }

# Form data
multer = "3"
regex = "1.10"

# URL encoding
serde_urlencoded = "0.7"

[features]
default = ["grpc"]
grpc = ["dep:tonic", "dep:prost", "dep:tower"]

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
