[package]
name = "easyssh-core"
version = "0.3.0"
edition = "2021"
authors = ["EasySSH Team"]
description = "EasySSH cross-platform native SSH client core library"
license = "MIT"
build = "build.rs"

[build-dependencies]
chrono = { workspace = true }

[lib]
name = "easyssh_core"
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
keyring = "3"
argon2 = { version = "0.5", features = ["alloc", "password-hash"] }
aes-gcm = "0.10"
rand = "0.8"
uuid = { workspace = true }
tokio = { workspace = true }
log = "0.4"
env_logger = "0.11"
thiserror = { workspace = true }
dirs = "5"
base64 = { workspace = true }
serde_yaml = { version = "0.9", optional = true }
ssh2 = "0.9"
portable-pty = { version = "0.8", optional = true }
chrono = { workspace = true }
lazy_static = "1.5"
futures-util = "0.3"
tokio-tungstenite = "0.24"
whoami = "1.5"
flate2 = "1.0"
csv = "1.3"
tracing = { workspace = true }

# Enterprise Vault dependencies
sha2 = "0.10"
hmac = "0.12"
totp-rs = { version = "5.3", features = ["qr", "zeroize"] }
zeroize = { version = "1.7", features = ["derive"] }
reed-solomon-erasure = "6.0"
regex = "1.10"
tempfile = "3"
hex = { version = "0.4", optional = true }

# Auto-update dependencies
reqwest = { version = "0.12", features = ["json", "stream"], optional = true }
ed25519-dalek = { version = "2", optional = true }
semver = { version = "1", optional = true }
bzip2 = { version = "0.4", optional = true }
zstd = { version = "0.13", optional = true }
walkdir = { version = "2", optional = true }
async-trait = { version = "0.1", optional = true }
url = "2.5.4"
urlencoding = "2.1"
anyhow = { version = "1", optional = true }

# Backup system dependencies
cron-parser = "0.3"
tar = "0.4"
zip = "2.2"
chacha20poly1305 = { version = "0.10", optional = true }
xz2 = { version = "0.1", optional = true }
futures = { version = "0.3", optional = true }
fs4 = { version = "0.12", optional = true }

# AWS SDK - 使用新版本替代 rusoto
aws-config = { version = "1.5", optional = true }
aws-sdk-s3 = { version = "1.5", optional = true }

# GCP SDK
google-cloud-storage = { version = "0.23", optional = true }

# Azure SDK
azure_storage = { version = "0.21", optional = true }
azure_storage_blobs = { version = "0.21", optional = true }

blake3 = "1.5"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
tokio-cron-scheduler = { version = "0.13", optional = true }

# Git support - 升级到修复版本
git2 = { version = "0.20", optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Security", "Win32_Storage_FileSystem", "Win32_System_Threading", "Win32_System_SystemInformation", "Win32_System_ProcessStatus"], optional = true }
windows = { version = "0.59", features = ["Win32_Foundation", "Win32_Security_Credentials", "Win32_System_WinRT", "Win32_Security_Tpm"] }

# i18n dependencies
fluent = "0.16"
fluent-bundle = "0.15"
unic-langid = { version = "0.9", features = ["macros"] }
intl-memoizer = "0.5"
sys-locale = "0.3"

# Kubernetes dependencies (optional)
kube = { version = "0.88", features = ["client", "rustls-tls", "ws"], optional = true }
k8s-openapi = { version = "0.21", features = ["v1_28"], optional = true }
yaml-rust2 = { version = "0.8", optional = true }
bytes = { version = "1.5", optional = true }
h2 = { version = "0.3", optional = true }
http = { version = "1.0", optional = true }

# Database client dependencies (optional)
sqlx = { version = "0.8.3", features = ["runtime-tokio", "tls-rustls"], optional = true }
mysql_async = { version = "0.34", optional = true }
tokio-postgres = { version = "0.7", optional = true }
mongodb = { version = "3.0", optional = true }
redis = { version = "0.25", features = ["tokio-comp"], optional = true }

[features]
default = ["lite", "dev-tools"]
lite = ["dep:hex", "dev-tools"]
standard = ["lite", "embedded-terminal", "split-screen", "sftp", "monitoring", "remote-desktop", "log-monitor", "docker", "dev-tools"]
pro = ["standard", "team", "audit", "sso", "sync", "dev-tools"]
docker = ["dep:serde_yaml"]
embedded-terminal = ["dep:portable-pty", "dep:async-trait"]
split-screen = []
sftp = []
monitoring = ["dep:async-trait", "dep:reqwest"]
remote-desktop = []
log-monitor = []
git = ["dep:git2"]
team = []
audit = []
sso = []
port-forwarding = []
sync = ["dep:async-trait", "dep:reqwest"]
telemetry = ["dep:windows-sys"]
kubernetes = [
    "dep:kube",
    "dep:k8s-openapi",
    "dep:yaml-rust2",
    "dep:futures",
    "dep:bytes",
    "dep:h2",
    "dep:http",
    "dep:serde_yaml"
]
auto-update = [
    "dep:reqwest",
    "dep:ed25519-dalek",
    "dep:hex",
    "dep:semver",
    "dep:bzip2",
    "dep:zstd",
    "dep:walkdir",
    "dep:async-trait",
    "dep:windows-sys",
    "dep:anyhow"
]
backup = [
    "dep:tokio-cron-scheduler",
    "dep:async-trait",
    "dep:zstd",
    "dep:bzip2",
    "dep:walkdir",
    "dep:reqwest",
    "dep:chacha20poly1305",
    "dep:xz2",
    "dep:futures",
    "dep:fs4"
]
backup-aws = ["backup", "dep:aws-config", "dep:aws-sdk-s3"]
backup-gcp = ["backup", "dep:google-cloud-storage"]
backup-azure = ["backup", "dep:azure_storage", "dep:azure_storage_blobs"]
cloud-aws = ["dep:aws-config", "dep:aws-sdk-s3"]
cloud-gcp = ["dep:google-cloud-storage"]
cloud-azure = ["dep:azure_storage", "dep:azure_storage_blobs"]
# Workflow automation feature
workflow = []
# Database client features
database-client = ["dep:async-trait"]
mysql-driver = ["database-client", "dep:mysql_async"]
postgres-driver = ["database-client", "dep:tokio-postgres"]
mongodb-driver = ["database-client", "dep:mongodb", "dep:futures"]
redis-driver = ["database-client", "dep:redis"]
# Debug tools feature - 统一Lite/Standard/Pro三版本Debug功能
dev-tools = []

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }

[[bench]]
name = "crypto_bench"
harness = false
required-features = []

[[bench]]
name = "db_bench"
harness = false
required-features = []

[[bench]]
name = "ssh_bench"
harness = false
required-features = []

[[bench]]
name = "sftp_bench"
harness = false
required-features = ["sftp"]

[[bench]]
name = "workflow_bench"
harness = false
required-features = ["workflow"]
