[package]
name = "easyssh-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "EasySSH cross-platform native SSH client core library"
build = "build.rs"
rust-version.workspace = true

[lib]
name = "easyssh_core"
crate-type = ["rlib", "staticlib", "cdylib"]

[build-dependencies]
chrono = { workspace = true }

[dependencies]
# Workspace dependencies - core
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true, optional = true }
rusqlite = { workspace = true }
keyring = { workspace = true }
argon2 = { workspace = true }
aes-gcm = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
lazy_static = { workspace = true }
once_cell = { workspace = true }
toml = { workspace = true, optional = true }
futures-util = { workspace = true }
tokio-tungstenite = { workspace = true }
whoami = { workspace = true }
flate2 = { workspace = true }
csv = { workspace = true }
tracing = { workspace = true }

# Workspace dependencies - security
sha2 = { workspace = true }
hmac = { workspace = true }
totp-rs = { workspace = true }
zeroize = { workspace = true }
reed-solomon-erasure = { workspace = true }
regex = { workspace = true }
tempfile = { workspace = true }
hex = { workspace = true, optional = true }

# Workspace dependencies - async/http
reqwest = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }

# Workspace dependencies - crypto
ed25519-dalek = { workspace = true, optional = true }
chacha20poly1305 = { workspace = true, optional = true }

# Workspace dependencies - compression
semver = { workspace = true, optional = true }
bzip2 = { workspace = true, optional = true }
zstd = { workspace = true, optional = true }
walkdir = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }

# Workspace dependencies - scheduling
cron-parser = { workspace = true }
tokio-cron-scheduler = { workspace = true, optional = true }
tar = { workspace = true }
zip = { workspace = true }
xz2 = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
fs4 = { workspace = true, optional = true }

# Workspace dependencies - cloud
aws-config = { workspace = true, optional = true }
aws-sdk-s3 = { workspace = true, optional = true }
google-cloud-storage = { workspace = true, optional = true }
azure_storage = { workspace = true, optional = true }
azure_storage_blobs = { workspace = true, optional = true }

# Workspace dependencies - SSO
openidconnect = { workspace = true, optional = true }
samael = { workspace = true, optional = true }

# Workspace dependencies - hash
blake3 = { workspace = true }
xxhash-rust = { workspace = true }

# Workspace dependencies - git
git2 = { workspace = true, optional = true }

# Workspace dependencies - URL
url = { workspace = true }
urlencoding = { workspace = true }

# i18n dependencies
fluent = { workspace = true }
fluent-bundle = "0.15"
unic-langid = { workspace = true }
intl-memoizer = "0.5"
sys-locale = { workspace = true }

# SSH
ssh2 = { workspace = true }
russh = { workspace = true, optional = true }
russh-keys = { workspace = true, optional = true }
russh-sftp = { workspace = true, optional = true }

# Terminal
portable-pty = { workspace = true, optional = true }

# Native PTY implementations
nix = { workspace = true, optional = true }

# Kubernetes dependencies (optional)
kube = { workspace = true, optional = true }
k8s-openapi = { workspace = true, optional = true }
yaml-rust2 = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
h2 = { workspace = true, optional = true }
http = { workspace = true, optional = true }

# Database client dependencies (optional)
sqlx = { workspace = true, optional = true }
mysql_async = { workspace = true, optional = true }
tokio-postgres = { workspace = true, optional = true }
mongodb = { workspace = true, optional = true }
redis = { workspace = true, optional = true }

# Windows-specific (always needed on Windows, optional for cross-platform)
[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, optional = true }
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
] }

[features]
default = ["lite", "ssh2-backend"]

# ===== SSH Backend Features =====
# ssh2: Original libssh2-based implementation (OpenSSL dependency)
ssh2-backend = []
# russh: Pure Rust implementation (no OpenSSL, recommended for security)
russh-backend = ["dep:russh", "dep:russh-keys", "dep:russh-sftp", "dep:async-trait"]

# ===== Version Features =====
# Lite: SSH配置保险箱 - 基础SSH连接和配置管理
lite = ["keychain", "config-crypto", "dev-tools", "update-checker", "serde_yaml", "toml"]

# Standard: 全功能客户端 - 在Lite基础上增加终端、分屏、监控、文件管理
standard = [
    "lite",
    "embedded-terminal",
    "database",
    "split-screen",
    "sftp",
    "monitoring",
    "port-forwarding",
    "log-monitor",
    "snippets",
    "dev-tools"
]

# Pro: 团队协作平台 - 在Standard基础上增加团队、审计、SSO
pro = [
    "standard",
    "team",
    "audit",
    "sso",
    "sync",
    "backup",
    "advanced-permissions",
    "dev-tools"
]

# ===== Functional Features =====
# Core infrastructure
keychain = []
config-crypto = []

# Update checker
update-checker = ["dep:reqwest"]

# Terminal features
embedded-terminal = ["dep:portable-pty", "dep:async-trait", "dep:nix"]
native-pty = ["dep:nix"]
split-screen = []

# File transfer
sftp = []

# Monitoring
monitoring = ["dep:async-trait", "dep:reqwest"]
log-monitor = []

# Connection
port-forwarding = []

# Code snippets
snippets = []

# Database client
database = ["dep:sqlx", "dep:hex"]
database-client = ["database"]
mysql-driver = ["database", "dep:mysql_async"]
postgres-driver = ["database", "dep:tokio-postgres"]
mongodb-driver = ["database", "dep:mongodb", "dep:futures"]
redis-driver = ["database", "dep:redis"]

# Cloud sync
sync = ["dep:async-trait", "dep:reqwest"]

# Backup system
backup = [
    "dep:tokio-cron-scheduler",
    "dep:async-trait",
    "dep:zstd",
    "dep:bzip2",
    "dep:walkdir",
    "dep:reqwest",
    "dep:chacha20poly1305",
    "dep:xz2",
    "dep:futures",
    "dep:fs4"
]
backup-aws = ["backup", "dep:aws-config", "dep:aws-sdk-s3"]
backup-gcp = ["backup", "dep:google-cloud-storage"]
backup-azure = ["backup", "dep:azure_storage", "dep:azure_storage_blobs"]

# Team collaboration
team = []
advanced-permissions = ["team"]

# Audit & compliance
audit = []

# SSO integration
sso = ["dep:openidconnect"]
saml-sso = ["sso", "dep:samael"]
oidc-sso = ["sso"]

# Kubernetes
kubernetes = [
    "dep:kube",
    "dep:k8s-openapi",
    "dep:yaml-rust2",
    "dep:futures",
    "dep:bytes",
    "dep:h2",
    "dep:http",
    "dep:serde_yaml"
]

# Docker integration
docker = ["dep:serde_yaml"]

# Remote desktop
remote-desktop = []

# Git integration
git = ["dep:git2"]

# Auto-update
auto-update = [
    "dep:reqwest",
    "dep:ed25519-dalek",
    "dep:hex",
    "dep:semver",
    "dep:bzip2",
    "dep:zstd",
    "dep:walkdir",
    "dep:async-trait",
    "dep:windows-sys",
    "dep:anyhow"
]

# Cloud storage
cloud-aws = ["dep:aws-config", "dep:aws-sdk-s3"]
cloud-gcp = ["dep:google-cloud-storage"]
cloud-azure = ["dep:azure_storage", "dep:azure_storage_blobs"]

# Workflow automation
workflow = []

# Telemetry (Windows)
telemetry = ["dep:windows-sys"]

# Dev tools - 统一Lite/Standard/Pro三版本Debug功能
dev-tools = []

# Serialization formats
serde_yaml = ["dep:serde_yaml"]

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
tokio-test = "0.4"
tempfile = "3"
mockall = "0.12"
serde_json = { workspace = true }

[[bench]]
name = "crypto_bench"
harness = false

[[bench]]
name = "db_bench"
harness = false

[[bench]]
name = "ssh_bench"
harness = false

[[bench]]
name = "search_bench"
harness = false

[[bench]]
name = "sftp_bench"
harness = false
required-features = ["sftp"]

[[bench]]
name = "performance_opt_bench"
harness = false
required-features = ["lite"]

[[bench]]
name = "workflow_bench"
harness = false
required-features = ["workflow"]

[[bench]]
name = "startup_bench"
harness = false
required-features = ["lite"]

# ============ Integration Tests ============
[[test]]
name = "database_integration_tests"
path = "tests/integration/database_integration_tests.rs"
required-features = ["database"]

[[test]]
name = "ssh_integration_tests"
path = "tests/integration/ssh_integration_tests.rs"
required-features = ["lite"]

[[test]]
name = "workflow_tests"
path = "tests/integration/workflow_tests.rs"
required-features = ["workflow"]

# ============ Unit Tests (organized) ============
[[test]]
name = "crypto_tests"
path = "tests/unit/crypto_tests.rs"

[[test]]
name = "database_tests"
path = "tests/unit/database_tests.rs"
required-features = ["database"]

[[test]]
name = "fuzz_tests"
path = "tests/unit/fuzz_tests.rs"

[[test]]
name = "performance_tests"
path = "tests/unit/performance_tests.rs"
required-features = ["lite"]

[[test]]
name = "search_tests"
path = "tests/unit/search_tests.rs"
required-features = ["lite"]

[[test]]
name = "security_tests"
path = "tests/unit/security_tests.rs"

[[test]]
name = "server_service_tests"
path = "tests/unit/server_service_tests.rs"
required-features = ["lite"]

[[test]]
name = "ssh_tests"
path = "tests/unit/ssh_tests.rs"
required-features = ["lite"]

# Root level tests
[[test]]
name = "database_compiles"
path = "tests/database_compiles.rs"
required-features = ["database"]

# Examples that require specific features
[[example]]
name = "workflow_demo"
required-features = ["workflow"]
